goyacc/print_1/y.output

state 0
	$accept: .expression $end 

	Number  shift 13
	Print  shift 10
	Label  shift 5
	Type  shift 11
	Comment  shift 4
	.  error

	expression  goto 1
	assignment  goto 2
	statement  goto 3
	print_st  goto 6
	label_st  goto 7
	type_st  goto 8
	arith_st  goto 9
	eval_expr  goto 12

state 1
	$accept:  expression.$end 
	expression:  expression.Comment 

	$end  accept
	Comment  shift 14
	.  error


state 2
	expression:  assignment.    (1)

	.  reduce 1 (src line 26)


state 3
	expression:  statement.    (2)

	.  reduce 2 (src line 28)


state 4
	expression:  Comment.    (3)

	.  reduce 3 (src line 29)


state 5
	label_st:  Label.    (9)
	assignment:  Label.'=' String 
	assignment:  Label.'=' eval_expr 
	assignment:  Label.'=' 
	eval_expr:  Label.    (24)

	$end  reduce 9 (src line 38)
	Comment  reduce 9 (src line 38)
	'='  shift 15
	.  reduce 24 (src line 65)


state 6
	statement:  print_st.    (5)

	.  reduce 5 (src line 32)


state 7
	statement:  label_st.    (6)

	.  reduce 6 (src line 34)


state 8
	statement:  type_st.    (7)

	.  reduce 7 (src line 35)


state 9
	statement:  arith_st.    (8)
	eval_expr:  arith_st.    (25)

	$end  reduce 8 (src line 36)
	Comment  reduce 8 (src line 36)
	.  reduce 25 (src line 66)


state 10
	print_st:  Print.Value 
	print_st:  Print.Label 
	print_st:  Print.    (14)

	String  shift 18
	Number  shift 19
	Label  shift 17
	.  reduce 14 (src line 47)

	Value  goto 16

state 11
	type_st:  Type.Label 

	Label  shift 20
	.  error


state 12
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'+'  shift 21
	'-'  shift 22
	'*'  shift 23
	'/'  shift 24
	.  error


state 13
	eval_expr:  Number.    (23)

	.  reduce 23 (src line 63)


state 14
	expression:  expression Comment.    (4)

	.  reduce 4 (src line 30)


state 15
	assignment:  Label '='.String 
	assignment:  Label '='.eval_expr 
	assignment:  Label '='.    (18)

	String  shift 25
	Number  shift 13
	Label  shift 27
	.  reduce 18 (src line 55)

	arith_st  goto 28
	eval_expr  goto 26

state 16
	print_st:  Print Value.    (12)

	.  reduce 12 (src line 44)


state 17
	print_st:  Print Label.    (13)

	.  reduce 13 (src line 46)


state 18
	Value:  String.    (10)

	.  reduce 10 (src line 41)


state 19
	Value:  Number.    (11)

	.  reduce 11 (src line 42)


state 20
	type_st:  Type Label.    (15)

	.  reduce 15 (src line 49)


state 21
	arith_st:  eval_expr '+'.eval_expr 

	Number  shift 13
	Label  shift 27
	.  error

	arith_st  goto 28
	eval_expr  goto 29

state 22
	arith_st:  eval_expr '-'.eval_expr 

	Number  shift 13
	Label  shift 27
	.  error

	arith_st  goto 28
	eval_expr  goto 30

state 23
	arith_st:  eval_expr '*'.eval_expr 

	Number  shift 13
	Label  shift 27
	.  error

	arith_st  goto 28
	eval_expr  goto 31

state 24
	arith_st:  eval_expr '/'.eval_expr 

	Number  shift 13
	Label  shift 27
	.  error

	arith_st  goto 28
	eval_expr  goto 32

state 25
	assignment:  Label '=' String.    (16)

	.  reduce 16 (src line 52)


state 26
	assignment:  Label '=' eval_expr.    (17)
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'+'  shift 21
	'-'  shift 22
	'*'  shift 23
	'/'  shift 24
	.  reduce 17 (src line 54)


state 27
	eval_expr:  Label.    (24)

	.  reduce 24 (src line 65)


state 28
	eval_expr:  arith_st.    (25)

	.  reduce 25 (src line 66)


state 29
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr '+' eval_expr.    (19)
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'*'  shift 23
	'/'  shift 24
	.  reduce 19 (src line 57)


state 30
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr '-' eval_expr.    (20)
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'*'  shift 23
	'/'  shift 24
	.  reduce 20 (src line 59)


state 31
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr '*' eval_expr.    (21)
	arith_st:  eval_expr.'/' eval_expr 

	.  reduce 21 (src line 60)


state 32
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 
	arith_st:  eval_expr '/' eval_expr.    (22)

	.  reduce 22 (src line 61)


14 terminals, 10 nonterminals
26 grammar rules, 33/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 19/240000
1 extra closures
34 shift entries, 5 exceptions
15 goto entries
4 entries saved by goto default
Optimizer space used: output 37/240000
37 table entries, 0 zero
maximum spread: 14, maximum offset: 24
